--- a/categories.yaml
+++ b/categories.yaml
@@ -5,14 +5,14 @@ children:
   score: 6
   rule: rule_work
   children:
-  - name: Programming
+  - name: Program
     color: "#0F0"
     score: 10
     rule: rule_programming
     children:
     - name: ActivityWatch
       rule: rule_activitywatch
-    - name: PersonalProject
+    - name: Personal
       rule: rule_personalproject
   - name: Thesis
     color: "#194D33"
@@ -20,7 +20,7 @@ children:
     children:
     - name: Gateway
       rule: rule_gateway
-    - name: ReferenceProjects
+    - name: Reference
       rule: rule_referenceprojects
   - name: Document
     color: "#68BC00"
@@ -38,7 +38,7 @@ children:
       name: Software
     - rule: rule_route
       name: Route
-- name: Entertainment
+- name: Entertain
   color: "#9F0500"
   children:
   - name: Games
